fix index table on small screen

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -4692,8 +4692,10 @@ input, select, textarea {
 
 	}
 
+
 .table-wrapper {
-  overflow-x: auto;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 table.alt {
